<resources>
    <string name="app_name">ToDay</string>


    <string-array name="fortunes">
        <item>خدایا، به خاطر نعمت‌های بی‌پایانت سپاسگزارم.</item>
        <item>پروردگارا، از تو برای همه چیزهایی که به من عطا کرده‌ای، شکرگزارم.</item>
        <item>خدایا، به خاطر سلامتی و خوشبختی که به من داده‌ای، سپاسگزارم.</item>
        <item>ای خدای مهربان، از تو برای هدایت و حمایتت سپاسگزارم.
5. خدایا، به خاطر عشق و محبتت که همیشه همراه من است، شکرگزارم.</item>
        <item>پروردگارا، به خاطر آرامشی که در قلبم نهاده‌ای، سپاسگزارم.</item>
        <item>خدایا، به خاطر خانواده و دوستانم که نعمت‌های بزرگی هستند، شکرگزارم.</item>
        <item>ای خدای بزرگ، از تو برای فرصت‌های جدیدی که به من داده‌ای، سپاسگزارم.</item>
        <item>خدایا، به خاطر قدرت و شجاعتی که در من نهاده‌ای، شکرگزارم.</item>
        <item>پروردگارا، به خاطر همه لحظات زیبای زندگی‌ام، سپاسگزارم.</item>
        <item>خدایا، به خاطر هدایت و راهنمایی‌ات در مسیر زندگی، شکرگزارم.</item>
        <item>ای خدای مهربان، از تو برای نعمت‌های معنوی و روحانی‌ات سپاسگزارم.</item>
        <item>خدایا، به خاطر امید و ایمان که در قلبم نهاده‌ای، شکرگزارم.</item>
        <item>پروردگارا، به خاطر همه چیزهایی که به من آموخته‌ای، سپاسگزارم.</item>
        <item>خدایا، به خاطر صبر و تحملی که به من داده‌ای، شکرگزارم.</item>
        <item> ای خدای بزرگ، از تو برای همه لحظات سختی که مرا قوی‌تر کرده‌اند، سپاسگزارم.</item>
        <item>خدایا، به خاطر نعمت‌های کوچک و بزرگی که هر روز به من می‌دهی، شکرگزارم.</item>
        <item>پروردگارا، به خاطر عشق و محبت بی‌پایانت، سپاسگزارم.</item>
        <item>خدایا، به خاطر همه چیزهایی که به من داده‌ای و همه چیزهایی که از من گرفته‌ای، شکرگزارم.</item>
        <item> ای خدای مهربان، از تو برای همه لحظات شادی و غم زندگی‌ام سپاسگزارم.</item>
        <item>خدایا، به خاطر همه فرصت‌هایی که به من داده‌ای تا رشد کنم، شکرگزارم.</item>
        <item>پروردگارا، به خاطر همه چیزهایی که به من آموخته‌ای و همه چیزهایی که هنوز باید بیاموزم، سپاسگزارم.</item>
        <item>خدایا، به خاطر همه لحظات زیبایی که در کنار عزیزانم داشته‌ام، شکرگزارم.</item>
        <item> ای خدای بزرگ، از تو برای همه چیزهایی که به من داده‌ای تا به دیگران کمک کنم، سپاسگزارم.</item>
        <item>خدایا، به خاطر همه لحظات آرامش و سکوتی که به من داده‌ای، شکرگزارم.</item>
        <item>پروردگارا، به خاطر همه چیزهایی که به من داده‌ای تا به خودم ایمان داشته باشم، سپاسگزارم.</item>
        <item>خدایا، به خاطر همه لحظات زیبایی که در طبیعت تجربه کرده‌ام، شکرگزارم.</item>
        <item> ای خدای مهربان، از تو برای همه چیزهایی که به من داده‌ای تا به دیگران عشق بورزم، سپاسگزارم.</item>
        <item>خدایا، به خاطر همه لحظات زیبایی که در زندگی‌ام تجربه کرده‌ام، شکرگزارم.</item>
        <item> پروردگارا، به خاطر همه چیزهایی که به من داده‌ای تا به دیگران امید بدهم، سپاسگزارم.</item>

        <!-- متون  بیشتری اضافه کنید -->
    </string-array>


    <string name="by_radinmaghsoodi">By Radin Maghsoodi</string>




    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About</string>


    <string name="RadinDev">RadinDev</string>
    <string name="app_version">App Version</string>
    <string name="mail_id">Radynmqswdy@gmail.com</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="telegram_link">https://t.me/irdevelopers_ir</string>
    <string name="insta_link">https://instagram.com/radin.dev</string>
    <string name="developer">Developer</string>


</resources>